--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				Pour patienter, faites vos pronostics, en remplissant le questionnaire ci-dessous.
 				<br>Bonne chance !
 				<br>Sylvana, Alex et Victor. 
-			</div><br>		
+			</div>		
 			<label for="votre_nom">Votre Nom & Prénom </label><input type="text" id="votre_nom" name="votre_nom" >
 			<label for="prenom_bebe">Prénom du bébé</label><input type="text" id="prenom_bebe" name="prenom_bebe" >
 			<br>
